<resources>
    <string name="app_name">Acabou Minha Luz</string>
    <string name="title_activity_home">Home</string>

    <string name="hint_name">Nome</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="load_login">Verificando credenciais</string>
    <string name="load_register">Aguarde o cadastro</string>
    <string name="load_tasks">Recuperando tarefas</string>
    <string name="button_in">Entrar</string>
    <string name="error_name_empty">Preencha seu nome</string>
    <string name="error_name_small">O nome deve ter mais de 3 caracteres</string>
    <string name="error_cpf_empty">Preencha seu CPF</string>
    <string name="error_cpf_invalid">CPF Inválido</string>
    <string name="error_email_empty">Email não pode ser vazio</string>
    <string name="error_password_empty">Senha não pode ser vazia</string>
    <string name="error_password_small">Senha não pode ter menos que 6 caracteres</string>
    <string name="requesting_permisisons">Que tal conceder acesso a sua localização? Com a concessão, " +
            "você poderá cadastrar suas reclamações e contribuir para uma melhor prestação de serviço! </string>
    <string name="coarse_location_permission">Manifest.permission.ACCESS_COARSE_LOCATION</string>
    <string name="fine_location_permission">Manifest.permission.ACCESS_FINE_LOCATION</string>
    <string name="label_map">Mapa</string>
    <string name="label_reclamacoes">Reclamações</string>
    <string name="profile_toolbar">Meus Dados</string>
    <string name="profile_tutorial">Pressione a imagem para alterar</string>
    <string name="save_button">Salvar</string>
    <string name="logout_button">Logout</string>
    <string name="hint_old_password">Senha atual</string>
    <string name="hint_new_password">Nova Senha</string>
    <string name="error_new_passoword_small">A nova senha deve ter no mínimo 6 caracteres</string>
    <string name="load_edit_profile">Aguarde</string>
    <string name="load">Aguarde</string>
    <string name="new_password_tutorial">Preencha o campo abaixo para alterar a senha</string>
    <string name="reclaim_tutorial">Preencha os campos para fazer uma reclamação</string>
    <string name="hint_obs">Observações</string>
    <string name="mark_reclaim_tutorial">Marque no mapa a sua posição exata</string>
    <string name="hint_data">Data</string>
    <string name="hint_hour">Hora</string>
    <string name="error_date_empty">Preencha a data</string>
    <string name="error_hour_empty">Preencha a hora</string>
    <string name="error_location_empty">Marque no mapa sua localização</string>
    <string name="claim_detail_toolbar">Reclamação</string>
    <string name="claims_toolbar">Minhas Reclamações</string>
</resources>
